# libtrsync

./: .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  testconfig.example.json
.github/workflows/: ci.yml
docs/: tr-undocumented-api.md
examples/: README.md  probe_portfolio_v2.py  smoke_fetch_all.py  smoke_track_asset.py
scripts/: extract_fixture.py  probe_rest.py  redact_dump.py
src/traderepublic_sync/: __init__.py  _classify.py  auth.py  client.py  constants.py  exceptions.py  parsing.py  resume.py  session.py  state.py  waf.py
src/traderepublic_sync/dual_legged/: __init__.py  mapping.py
src/traderepublic_sync/v1/: __init__.py  fx.py  models.py  portfolio.py
tests/: test_classify.py  test_dual_legged.py  test_fetch_filters.py  test_fx.py  test_live_fetch_all.py  test_live_track_asset.py  test_parsing.py  test_parsing_fixtures.py  test_rest_pnl.py  test_session_expiry.py  test_session_refresh.py  test_v1_portfolio.py
tests/fixtures/: card_expense.json  dividend.json  interest.json  pea_pay_in.json  pea_purchase.json  purchase_savingsplan.json  trade.json  transfer_in.json
