[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traderepublic-sync"
version = "0.5.0"
description = "Unofficial Trade Republic sync library: WAF acquisition, login + 2FA, WebSocket data fetching, transaction parsing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Helios de Creisquer", email = "hdecreis@gmail.com" },
]
keywords = ["trade-republic", "traderepublic", "finance", "broker", "sync", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "websockets>=15,<17",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
playwright = ["playwright>=1.52"]
selenium = ["selenium>=4"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/hdecreis/libtrsync"
Source = "https://github.com/hdecreis/libtrsync"
Issues = "https://github.com/hdecreis/libtrsync/issues"
Changelog = "https://github.com/hdecreis/libtrsync/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
traderepublic_sync = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
